--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -32,6 +32,11 @@ mockk = "1.13.7"
 # for compose
 activityComposeVersion = "1.7.0"
 
+# Constraintlayout
+constraintlayoutVersion = "2.1.4"
+constraintlayoutComposeVersion = "1.0.1"
+constraintlayoutCore = "1.0.4"
+
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinx-coroutines-core" }
@@ -52,5 +57,10 @@ robolectric = { module = "org.robolectric:robolectric", version.ref = "robolectr
 mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
 
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "activityComposeVersion" }
+
+# constraintlayout
+androidx-constraintlayout = { module = "androidx.constraintlayout:constraintlayout", version.ref = "constraintlayoutVersion" }
+androidx-constraintlayout-compose = { module = "androidx.constraintlayout:constraintlayout-compose", version.ref = "constraintlayoutComposeVersion" }
+androidx-constraintlayout-core = {module = "androidx.constraintlayout:constraintlayout-core",version.ref = "constraintlayoutCore"}
 
 [plugins]
