--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -31,6 +31,7 @@ mockk = "1.13.7"
 
 # for compose
 activityComposeVersion = "1.7.0"
+compose-bom = "2024.02.01"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -52,5 +53,28 @@ robolectric = { module = "org.robolectric:robolectric", version.ref = "robolectr
 mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
 
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "activityComposeVersion" }
+
+# for Compoase
+compose-bom = { module = "androidx.compose:compose-bom", version.ref = "compose-bom" }
+compose-runtime = { module = "androidx.compose.runtime:runtime" }
+
+#// Material Design 3
+compose-material3 = { module = "androidx.compose.material3:material3" }
+
+#  Material Design 2
+compose-material = { module = "androidx.compose.material:material" }
+
+# or skip Material Design and build directly on top of foundational components
+compose-foundation = { module = "androidx.compose.foundation:foundation" }
+
+compose-ui = { module = "androidx.compose.ui:ui" }
+
+#// Android Studio Preview support
+compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview" }
+compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling" }
+
+#// UI Tests
+compose-ui-test-junit4 = { module = "androidx.compose.ui:ui-test-junit4" }
+compose-ui-test-manifest = { module = "androidx.compose.ui:ui-test-manifest" }
 
 [plugins]
