--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -38,13 +38,21 @@ constraintlayoutVersion = "2.1.4"
 constraintlayoutComposeVersion = "1.0.1"
 constraintlayoutCore = "1.0.4"
 
+# gradle
+kotlinGradlePluginVersion = "1.9.10"
+ktlintGradleVersion = "12.1.0"
+gradleVersion = "7.4.2"
+
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+gradle = { module = "com.android.tools.build:gradle", version.ref = "gradleVersion" }
+kotlin-gradle-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlinGradlePluginVersion" }
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinx-coroutines-core" }
 appcompat = { module = "androidx.appcompat:appcompat", version.ref = "appcompat" }
 google-material = { module = "com.google.android.material:material", version.ref = "google-material" }
 
 # Moshi
+ktlint-gradle = { module = "org.jlleitschuh.gradle:ktlint-gradle", version.ref = "ktlintGradleVersion" }
 moshi = { module = "com.squareup.moshi:moshi", version.ref = "moshi" }
 moshi-kotlin-codegen = { module = "com.squareup.moshi:moshi-kotlin-codegen", version.ref = "moshi" }
 
@@ -85,6 +93,6 @@ compose-ui-test-manifest = { module = "androidx.compose.ui:ui-test-manifest" }
 # constraintlayout
 androidx-constraintlayout = { module = "androidx.constraintlayout:constraintlayout", version.ref = "constraintlayoutVersion" }
 androidx-constraintlayout-compose = { module = "androidx.constraintlayout:constraintlayout-compose", version.ref = "constraintlayoutComposeVersion" }
-androidx-constraintlayout-core = {module = "androidx.constraintlayout:constraintlayout-core",version.ref = "constraintlayoutCore"}
+androidx-constraintlayout-core = { module = "androidx.constraintlayout:constraintlayout-core", version.ref = "constraintlayoutCore" }
 
 [plugins]
